# WeChat_Robot

./: ItChat-UOS.py  README.md  SendMessage.py  Template.md  cleanse.py  pad.py  process_data.py  pyproject.toml  select_category.py  send_message.py
archived/: cleanse_data.py  process_data.py
archived/data/: 发布计划导出.xlsx  商家发布.xlsx
data/: result.xlsx  门店发布统计.xlsx
