[tool.poetry]
name = "wechatrobot"
version = "0.1.0"
description = ""
authors = ["Sakura <1467649772@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apscheduler = "^3.10.4"
schedule = "^1.2.2"
wxauto = "^3.9.11.17.4"
itchat-uos = "1.5.0.dev0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
